--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,29 @@
         width: 100%;
     }
 }
+
+/* Modal Content */
+.modal-content {
+    position: fixed;
+    background-color: #6931ca;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 58%;
+    height: 50%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
