--- a/src/App.css
+++ b/src/App.css
@@ -27,28 +27,45 @@
     }
 }
 
-/* Modal Content */
-.modal-content {
-    position: fixed;
-    background-color: #6931ca;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 58%;
-    height: 50%;
-  }
-  
-  /* The Close Button */
-  .close {
+.counter {
+    width: 20%;
+    height: auto;
+    margin-bottom: 20px;
+    background: #FFFF;
+    padding: 1px 10px;
+    border-radius: 30px;
+    box-sizing: border-box;
+}
+
+.counter span {
+    font-size: 27px;
+    font-weight: 700;
+    color: #6931ca;
+    position: relative;
+    top: 3px;
+}
+
+@media (max-width: 760px) {
+    .counter {
+        width: 46%;
+        height: auto;
+        margin-bottom: 20px;
+        background: #FFFF;
+        padding: 1px 10px;
+        border-radius: 30px;
+    }
+}
+
+.close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
+}
   
-  .close:hover,
-  .close:focus {
+.close:hover,
+.close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
