--- a/src/components/DownButton/styles.css
+++ b/src/components/DownButton/styles.css
@@ -13,7 +13,7 @@
     cursor: pointer;
 }
 
-.btn-download a {
+.btn-download a, p {
     font-size: 16px;
     font-weight: bold;
     color: #FFF;
