--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
     height: auto;
     margin-bottom: 20px;
     background: #FFFF;
+    color: #000;
     padding: 1px 10px;
     border-radius: 30px;
     box-sizing: border-box;
