--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,15 @@
     height: auto;
     margin-bottom: 20px;
     background: #FFFF;
-    color: #000;
     padding: 1px 10px;
     border-radius: 30px;
     box-sizing: border-box;
 }
+
+.counter p {
+    color: #000;
+}
+
 
 .counter span {
     font-size: 27px;
